# MediaApp

./: .gitmodules  README.md  build.gradle  gradle.properties  run.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/harman/vns/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Common.h  Download.cpp  Download.h  PingThread.cpp  PingThread.h  Signal.cpp  Signal.h  Speed.cpp  Speed.h  Upload.cpp  Upload.h  native-lib.cpp
app/src/main/java/com/harman/vns/: HttpLiveStream.kt  JniHandler.java  LiveStreamingFragment.kt  MainActivity.java  MainActivity.kt  SettingsFragment.kt  Websocket.kt
app/src/main/java/com/harman/vns/ui/: DownloadFragment.kt  PingFragment.kt  PingViewModel.kt  VisionNextActivity.kt  WebsocketModel.kt  WelcomeFragment.kt
app/src/main/java/com/harman/vns/ui/adapter/: WebsocketAdapter.kt  WebsocketViewHolder.kt
app/src/main/java/com/harman/vns/utils/: DownloadSize.kt
app/src/main/res/drawable/: ic_account_circle_black_50dp.xml  ic_call_black_50dp.xml  ic_message_black_50dp.xml  ic_send_black_24dp.xml  offline.xml  online.xml
app/src/main/res/layout/: activity_main.xml  activity_vison_next.xml  fragment_download.xml  fragment_http_live_stream.xml  fragment_live_streaming.xml  fragment_settings.xml  fragment_websocket.xml  fragment_welcome.xml  list_times.xml  nav_header_drawer.xml  ping_fragment.xml
app/src/main/res/layout-v14/: fragment_download.xml
app/src/main/res/menu/: menu_nav_drawer.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: google_maps_key.xml  strings.xml
app/src/test/java/com/harman/vns/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
